--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.viomi.kotlinactivitytest">
 
     <application
@@ -9,11 +10,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinActivityTest">
+        <activity android:name=".ThirdActivity"
+            tools:ignore="AppLinkUrlError">
+            <intent-filter tools:ignore="AppLinUrlError">
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="https"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".SecondLayoutActivity">
             <intent-filter>
-                <action android:name="com.viomi.kotlinactivitytest.ACTION_START"/>
-                <category android:name="android.intent.category.DEFAULT"></category>
-                <category android:name="com.viomi.kotlinactivitytest.MY_CATEGORY"></category>
+                <action android:name="com.viomi.kotlinactivitytest.ACTION_START" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.viomi.kotlinactivitytest.MY_CATEGORY" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity">
