--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
                 <category android:name="com.viomi.kotlinactivitytest.MY_CATEGORY" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop"
+            android:label="this is firstactivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
